leptos_macro/tests/ui/view/slot_missing_field.stderr
warning: use of deprecated method `ThenBuilder::build`: Missing required field a
  --> tests/ui/view/slot_missing_field.rs:16:14
   |
16 |             <Then slot />
   |              ^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/ui/view/slot_missing_field.rs:16:14
   |
16 |             <Then slot />
   |              ^^^^ an argument of type `ThenBuilder_Error_Missing_required_field_a` is missing
   |
note: method defined here
  --> tests/ui/view/slot_missing_field.rs:3:1
   |
3  | #[slot]
   | ^^^^^^^
   = note: this error originates in the derive macro `::leptos::typed_builder_macro::TypedBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
16 |             <Then(/* ThenBuilder_Error_Missing_required_field_a */) slot />
   |                  ++++++++++++++++++++++++++++++++++++++++++++++++++
